Improve handling of required counts in preview.

--- a/lang/en/newsletter.lang
+++ b/lang/en/newsletter.lang
@@ -19,7 +19,7 @@ NEWSLETTER_ERR_NOSORT  = No sort information in posted data
 NEWSLETTER_ERR_BADSORT = The sort data receieved by the API cannot be parsed.
 
 NEWSLETTER_LIST_PREVIEW  = Preview: '***newsletter***'
-NEWSLETTER_LIST_REQUIRED = This section is required, but it contains no articles. This newsletter can not be published until at least one article is added to this section.
+NEWSLETTER_LIST_REQUIRED = This section does not contain enough articles for publication: the section contains ***count*** article(s), but ***required*** article(s) are required. This newsletter can not be published until the required number of articles have been added to this section.
 
 NEWSLETTER_PUBLISH_FAILED = Newsletter publication failed
 NEWSLETTER_PUBLISHED      = Newsletter published successfully.
