--- a/lang/en/medialibrary.lang
+++ b/lang/en/medialibrary.lang
@@ -4,3 +4,6 @@ MEDIA_UPLOAD  = ... or upload a new one
 UPLOADER_DROPHERE = Drop image to upload here
 
 MEDIA_PERMISSION_NOUPLOAD = You do not have permission to upload images.
+
+MEDIA_ERR_NOIMGDATA = No image data was found in the upload.
+MEDIA_ERR_NOTMP     = Unable to obtain temporary image file data.
