--- a/lang/en/medialibrary.lang
+++ b/lang/en/medialibrary.lang
@@ -19,3 +19,5 @@ MEDIA_PERMISSION_NOUPLOAD = You do not have permission to upload images.
 
 MEDIA_ERR_NOIMGDATA = No image data was found in the upload.
 MEDIA_ERR_NOTMP     = Unable to obtain temporary image file data.
+
+MEDIA_COPYRIGHT = Before uploading images, ensure that the University has permission to use the image, or it is attributed properly under an appropriate Creative Commons or similar license. Please <b>do not</b> upload random images copied from the internet!
