--- a/lang/en/subscriptions.lang
+++ b/lang/en/subscriptions.lang
@@ -78,7 +78,8 @@ SUBS_MANAGE_DELETE_LONGDESC = You have been unsubscribed from all feeds, and you
 
 SUBS_CRON_TITLE            = Subscription processing
 SUBS_CRON_STATUS           = Subscription processing status:
+SUBS_CRON_NOSUBS           = No subscriptions need sending.
 
-SUBS_DIGEST_TITLE          = ***new*** new article.
-SUBS_DIGEST_TITLES         = ***new*** new articles.
+SUBS_DIGEST_TITLE          = [Newsagent] ***new*** new article.
+SUBS_DIGEST_TITLES         = [Newsagent] ***new*** new articles.
 SUBS_DIGEST_NONE           = No
