Make upload form conditional on user having upload permission

--- a/lang/en/medialibrary.lang
+++ b/lang/en/medialibrary.lang
@@ -1,5 +1,6 @@
-MEDIA_SELECT  = Select an image...
-MEDIA_UPLOAD  = ... or upload a new one
+MEDIA_SELECT   = Select an image...
+MEDIA_UPLOAD   = ... or upload a new one
+MEDIA_NOUPLOAD = You do not have permission to upload new images
 
 UPLOADER_DROPHERE = Drop an image file to upload here
 
