Show files in HTML feeds.

--- a/lang/en/feed.lang
+++ b/lang/en/feed.lang
@@ -2,3 +2,4 @@ RSS_DESCRIPTION  = Latest ***feedname*** news
 RSS_TITLE        = ***feedname*** Feed
 
 FEED_PUBLISHED   = Published
+FEED_FILES       = Files:
