Fixes for autosave and login checks
Attempts to address autosave issues reported by @tobyhoward - if the compose page is left open on a laptop, and the laptop goes into hibernate mode, the normal heartbeat from autosave will not happen and the session will have expired when the laptop is woken up. Previously, session validity was only checked when creating/editing - it had assumed the autosave heartbeat would keep the session alive. This change enables session checking in autosave features as well.

--- a/lang/en/compose.lang
+++ b/lang/en/compose.lang
@@ -126,6 +126,8 @@ COMPOSE_AUTOSAVE_LOAD     = Restore autosave
 COMPOSE_AUTOSAVE_CHECKING = Checking for autosave...
 COMPOSE_AUTOSAVE_LOADING  = Restoring autosave...
 COMPOSE_AUTOSAVE_SAVING   = Saving autosave...
+COMPOSE_AUTOSAVE_FAILED   = Autosave operation failed
+COMPOSE_CHECKING_LOGIN    = Checking session...
 
 COMPOSE_ERR_BADSCHEDULE   = Unable to locate an ID for the selected schedule.
 
