--- a/lang/en/compose.lang
+++ b/lang/en/compose.lang
@@ -38,8 +38,11 @@ COMPOSE_STICKYDAYS5 = Sticky for 5 days
 COMPOSE_STICKYDAYS6 = Sticky for 6 days
 COMPOSE_STICKYDAYS7 = Sticky for 7 days
 
-COMPOSE_FULLSUMMARY = Summary display
-COMPOSE_FULLSUMOPT  = Show summary in full article view.
+COMPOSE_FULLSUMMARY  = Show summary in:
+COMPOSE_FULLSUM_NONE = Do not show summary
+COMPOSE_FULLSUM_FULL = Full article view
+COMPOSE_FULLSUM_NOTE = Notifications
+COMPOSE_FULLSUM_BOTH = Full article view and notifications
 
 COMPOSE_NOSCHEDULE  = You do not currently have access to any scheduled releases.
 COMPOSE_SCHEDULE    = Newsletter
