Enable compose/edit preview facility

--- a/lang/en/compose.lang
+++ b/lang/en/compose.lang
@@ -123,6 +123,7 @@ COMPOSE_AUTOSAVE_FAIL     = Autosave failed
 COMPOSE_AUTOSAVE_PERM     = You do not have permission to autosave
 COMPOSE_AUTOSAVE_SAVE     = Save now
 COMPOSE_AUTOSAVE_LOAD     = Restore autosave
+COMPOSE_AUTOSAVE_PREVIEW  = Preview
 COMPOSE_AUTOSAVE_CHECKING = Checking for autosave...
 COMPOSE_AUTOSAVE_LOADING  = Restoring autosave...
 COMPOSE_AUTOSAVE_SAVING   = Saving autosave...
