Basic support for UI side of optout facility
Note that this needs updated information in the opt-out form for finding
information from school/uni level sources without emails

--- a/lang/en/userbar.lang
+++ b/lang/en/userbar.lang
@@ -22,3 +22,5 @@ USERBAR_FRONT           = Newsagent front page (Feed list)
 USERBAR_FEEDS           = RSS Feeds
 USERBAR_TELLUS          = Tell Us!
 USERBAR_TELLUS_QUEUES   = Tell Us Messages
+
+USERBAR_OPTOUT          = Set Opt-Out Prefs
