Fix school reference

--- a/lang/en/email.lang
+++ b/lang/en/email.lang
@@ -1,4 +1,4 @@
-EMAIL_SOCSTITLE = School of Computer Science
+EMAIL_SOCSTITLE = Department of Computer Science
 EMAIL_SENTBY    = Sent by Newsagent to:
 EMAIL_FEEDS     = Posted in feeds:
 EMAIL_TELLUS    = Tell-Us your CS News, Events, and Activities!
